--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	
 	<link rel="stylesheet" href="assets/css/bootstrap.css" />
 	
-	<script type="text/javascript" src="../use.typekit.net/wdj6cpr.js"></script>
+	<script type="text/javascript" src="use.typekit.net/wdj6cpr.js"></script>
 	<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 	
 	<script src="assets/js/respond.min.js"></script>
