--- a/index.html
+++ b/index.html
@@ -38,6 +38,14 @@
 	
 	<script src="assets/js/respond.min.js"></script>
 	<script src="assets/js/modernizr.js"></script>
+
+	<style>
+		* {
+			 -webkit-font-smoothing: antialiased;
+			 text-shadow: 1px 1px 1px rgba(0,0,0,0.004);
+		}
+	</style>
+
 	
 </head>
 
@@ -353,11 +361,12 @@
 
 				<div class="col-md-12">
 
-					<ul class="footer-list" style="margin-left:5.5cm">
+					<ul class="footer-list">
 
 						<li><a href="https://www.linkedin.com/in/shubham-jain-710b44104">linkedin</a></li>
 						<li><a href="https://github.com/sjb7">github</a></li>
 						<li><a href="http://stackoverflow.com/users/6497083/shubham-jain"">stack overflow</a></li>
+						<li><a href="mailto:shubhamjain_@outlook.com">Mail</a></li>
 
 					</ul>
 
