--- a/index.html
+++ b/index.html
@@ -363,10 +363,10 @@
 
 					<ul class="footer-list">
 
-						<li><a href="https://www.linkedin.com/in/shubham-jain-710b44104">linkedin</a></li>
-						<li><a href="https://github.com/sjb7">github</a></li>
-						<li><a href="http://stackoverflow.com/users/6497083/shubham-jain"">stack overflow</a></li>
-						<li><a href="mailto:shubhamjain_@outlook.com">Mail</a></li>
+						<li><a href="https://www.linkedin.com/in/shubhamjain7" rel="me" target="_blank">linkedin</a></li>
+						<li><a href="https://github.com/sjb7" rel="me" target="_blank">github</a></li>
+						<li><a href="http://stackoverflow.com/story/shubham_jain" rel="me" target="_blank">stack overflow</a></li>
+						<li><a href="https://plus.google.com/105635439005871968300" rel="me" target="_blank">Google Plus</a></li>
 
 					</ul>
 
@@ -389,8 +389,7 @@
 		</div>
 
 	</footer>
-
-
+	
 
 	<script src="../code.jquery.com/jquery-1.10.2.min.js"></script>
 	<script>window.jQuery || document.write('<script src="assets/js/jquery-1.10.2.min.html"><\/script>')</script>
