--- a/work.html
+++ b/work.html
@@ -206,7 +206,200 @@
 	
 	</section>
 
-	
+	<section id="topical-taxo" class="work-shots">
+
+	<div class="container">
+
+		<div class="row">
+
+			<div class="col-md-12">
+
+				<div class="shot">
+
+					<img class="lazy"  src="assets/img/content/work/keyword-discovery.jpg" style="margin-left: 15px" alt="Topical Taxonomy Deep and Broad"  width="600" height="400" />
+
+				</div>
+
+
+
+				<div class="shot-info">
+
+
+
+					<h2>Topical Taxonomy Deep and Broad</h2>
+
+					<h3>Directi (Media.net)</h3>
+
+
+					<p>
+						Built a system to suggest, quality contextual advertisements on publisher urls for European traffic using Topic Extractor. Responsible for the entire product lifecycle, from deciding features, to system design and implementation. Combined revenue boost of around 3000 dollars everyday on German, French and Spanish traffic.
+					</p>
+
+				</div>
+
+			</div>
+
+		</div>
+
+	</div>
+
+</section>
+
+<section id="compound-splitter" class="work-shots">
+
+	<div class="container">
+
+		<div class="row">
+
+			<div class="col-md-12">
+
+				<div class="shot">
+
+					<img class="lazy"  src="assets/img/content/work/compound-splitter.png" style="margin-left: 15px" alt="German Compound Splitter"  width="600" height="400" />
+
+				</div>
+
+
+
+				<div class="shot-info">
+
+
+
+					<h2>German Compound Splitter</h2>
+
+					<h3>Directi (Media.net)</h3>
+
+
+					<p>
+						Few languages such as German, Swedish etc. allows the formation of compound words. Built an unsupervised Compound-Splitter from ground up which uses distributional semantics and does not require any linguistic knowledge to find the best split. 26 percent increase in accuracy in Taxonomy systems (Categorisation of a document)
+					</p>
+
+				</div>
+
+			</div>
+
+		</div>
+
+	</div>
+
+</section>
+
+<section id="minesweeper" class="work-shots">
+
+	<div class="container">
+
+		<div class="row">
+
+			<div class="col-md-12">
+
+				<div class="shot">
+
+					<img class="lazy"  src="assets/img/content/work/elastic_search.png" style="margin-left: 15px" alt="Minesweeper"  width="600" height="400" />
+
+				</div>
+
+
+
+				<div class="shot-info">
+
+
+
+					<h2>Minesweeper</h2>
+
+					<h3>Directi (Media.net)</h3>
+
+
+					<p>
+						Built a strategy for serving contextual ads with faster turnaround time for any new language. It uses intelligently built elastic search queries to get relevant keywords.
+					</p>
+
+				</div>
+
+			</div>
+
+		</div>
+
+	</div>
+
+</section>
+
+<section id="immediate-pattern" class="work-shots">
+
+	<div class="container">
+
+		<div class="row">
+
+			<div class="col-md-12">
+
+				<div class="shot">
+
+					<img class="lazy"  src="assets/img/content/work/immediate-pattern.jpg" style="margin-left: 15px" alt="Immediate Pattern"  width="600" height="400" />
+
+				</div>
+
+
+
+				<div class="shot-info">
+
+
+
+					<h2>Immediate Pattern</h2>
+
+					<h3>Directi (Media.net)</h3>
+
+
+					<p>
+						Built a system for serving contextual ads with low latency. It learns performance of keywords on regex patterns of URL which are used for final serving.
+					</p>
+
+				</div>
+
+			</div>
+
+		</div>
+
+	</div>
+
+</section>
+
+<section id="topic-extractor" class="work-shots">
+
+	<div class="container">
+
+		<div class="row">
+
+			<div class="col-md-12">
+
+				<div class="shot">
+
+					<img class="lazy"  src="assets/img/content/work/topic-extractor.png" style="margin-left: 15px" alt="Topic Extractor"  width="600" height="400" />
+
+				</div>
+
+
+
+				<div class="shot-info">
+
+
+
+					<h2>Topic Extractor</h2>
+
+					<h3>Directi (Media.net)</h3>
+
+
+					<p>
+						Extended a system for extraction of topics from a document using Wikipedia for few European languages. Uses various wikipedia data points such as links between articles, categories of articles, disambiguation pages etc. This system is used for serving contextual ads, finding related articles and various other NLP tasks within the organisation.
+					</p>
+
+				</div>
+
+			</div>
+
+		</div>
+
+	</div>
+
+</section>
 	
 	<section id="sherpa" class="work-shots">
 	
