--- a/contact.html
+++ b/contact.html
@@ -9,15 +9,15 @@
 <head>
 	
 	<title>
-		Shubham Jain - Product Manager - Portfolio	
+		Sonali Gupta - Product Manager - Contact	
 	</title>
 
 	<meta charset="utf-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 	
-	<meta name="description" content="The portfolio of Shubham Jain" />
-	<meta name="keywords" content="shubham,jain,shubhamjain,shubham jain,developer,algorithms,java,javascript,c++" />
+	<meta name="description" content="The portfolio of Sonali Gupta" />
+	<meta name="keywords" content="sonali,gupta,sonaligupta,sonali gupta,PM,product manager,product,product strategy,agile" />
 	<meta name="robots" content="index, follow" />
 	
 	
@@ -129,7 +129,7 @@
 								<li><a href="index.html">About</a></li>
 								<li><a href="work.html">Experience</a></li>
 								<li><a href="portfolio.html">Portfolio</a></li>
-								<li><a href="https://medium.com/@reshuec145" target="_blank">Blog</a></li>
+								<!--<li><a href="https://medium.com/@reshuec145" target="_blank">Blog</a></li>-->
 								<li><a class="active" href="contact.html">Contact</a></li>									
 							</ul>
 						</nav>
