--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 	
 	<meta name="description" content="The portfolio of Sonali Gupta" />
-	<meta name="keywords" content="sonali,gupta,sonaligupta,sonali gupta,PM,product manager,product,product strategy,agile" />
+	<meta name="keywords" content="sonali,gupta,sonaligupta,sonali gupta,PM,product manager,product,product strategy,agile,problem-solving" />
 	<meta name="robots" content="index, follow" />
 	
 	
